src/tests/functionality/assignment_3_io_arrays_comments/valid/10_mandatory_printf_width_and_percent_escape.c
#include <stdio.h>
int main() {
    int n = 7;
    printf("number=%5d percent=%%\n", n);
    return 0;
}
