src/tests/functionality/assignment_3_io_arrays_comments/invalid_semantic/04_mandatory_array_initializer_1d_too_long.c
int main() {
    int values[3] = {1, 2, 3, 4};
    return 0;
}
